# backtrader_demo

./: .gitignore  README.md  pyproject.toml
examples/: multi_indicator.py  rsi_strategy.py  sample_data.csv  sma_cross.py
minitrader/: __init__.py  analyzer.py  broker.py  cerebro.py  feed.py  indicator.py  order.py  plot.py  position.py  sizer.py  strategy.py  utils.py
minitrader/analyzers/: __init__.py  drawdown.py  returns.py  sharpe.py  trade_analyzer.py
minitrader/indicators/: __init__.py  atr.py  bollinger.py  crossover.py  ema.py  macd.py  rsi.py  sma.py  stochastic.py
scripts/: auto_commit.ps1  upload_once.ps1
tests/: test_broker.py  test_feed.py  test_indicators.py  test_strategy.py
